<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google" />
        </FrameLayout>

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/title"
            android:textSize="19dp"
            android:textStyle="bold" />


        <TextView
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text" />

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_marginBottom="8dp"
            android:text="@string/specification" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/display"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    android:text="@string/content_specs_display" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/size"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    android:text="@string/content_specs_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_marginBottom="8dp"
            android:text="@string/seller" />


    </LinearLayout>
</ScrollView>