<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_toolbar"
        app:title="Profil"
        app:titleTextColor="@color/black" />

    <!-- Profil -->
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/app_widget_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Foto Profil -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/content_description_avatar_image"
            android:src="@drawable/profile" />

    </RelativeLayout>

    <!-- UI dari Change Language, Set App Permission, dan Pandora Box -->
    <TextView
        android:id="@+id/label_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/const_text_setting"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

<!--    <ImageView-->
<!--        android:id="@+id/btn_info"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:padding="16dp"-->
<!--        android:src="@drawable/ic_baseline_info_24"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/label_auth"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/label_auth"-->
<!--        app:tint="@color/black" />-->

    <!-- Change Language -->
    <RelativeLayout
        android:id="@+id/btn_set_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auth">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/const_text_name"
            android:textColor="@color/dicoding_secondary_700"
            app:drawableStartCompat="@drawable/ic_baseline_person_24"
            app:drawableTint="@color/dicoding_secondary_700"
            tools:ignore="RelativeOverlap"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_nomor_telpon"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/dicoding_secondary_500" />
    </RelativeLayout>

    <!-- Set App Permission -->
    <RelativeLayout
        android:id="@+id/btn_set_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_language">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/content_nomor_telpon"
            android:textColor="@color/dicoding_secondary_700"
            app:drawableStartCompat="@drawable/ic_baseline_tlp_24"
            app:drawableTint="@color/dicoding_secondary_700"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/const_email"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/dicoding_secondary_500" />
    </RelativeLayout>

    <!-- Pandora Box -->
    <RelativeLayout
        android:id="@+id/btn_pandora_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_permission">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/const_email"
            android:textColor="@color/dicoding_secondary_700"
            app:drawableStartCompat="@drawable/ic_box"
            app:drawableTint="@color/dicoding_secondary_700"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_description_btn_app_setting"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/dicoding_secondary_500" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
